# 17408B0E-D457-4DDF-8FCC-FC2C8FAB257D

./: CMakeLists.txt  README  configure.ac
src/: .RomanCalculator.h.kate-swp  CMakeLists.txt  Makefile.am  RomanCalculator.c  RomanCalculator.h  main.c
tests/: CMakeLists.txt  Makefile.am  check_RomanCalculator.c
